Fix alignment

--- a/iteration2/game1/css/style.css
+++ b/iteration2/game1/css/style.css
@@ -7,6 +7,8 @@ body,
 html {
     height: 100%;
     margin: 0;
+    justify-content: center;
+    align-items: center;
 }
 
 .bg {
@@ -16,15 +18,13 @@ html {
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    /* justify-content: center;
-    align-items: center; */
+    justify-content: center;
+    align-items: center;
 }
 
 li div {
     display: table-cell;
     vertical-align: middle;
-    justify-content: center;
-    align-items: center;
 }
 
 ul {
@@ -40,7 +40,6 @@ ul li div span {
 .wrapper {
     display: flex;
     justify-content: center;
-    align-items: center;
     margin: 15px auto;
     position: relative;
 }
